fixed landing page alignment and added comments

--- a/src/components/LandingPage/LandingPage.module.css
+++ b/src/components/LandingPage/LandingPage.module.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     padding: 1em;
-
+    width: 95%;
 }
 .landing-page-card>img{
     max-width: 350px;
@@ -11,6 +11,9 @@
     border-radius: 10% 10%;
     background-color: white;
     z-index: 2;
+}
+.landing-page-paragraph {
+   max-width: 1000px;
 }
 .landing-page-card-button{
     border-radius: 30px;
@@ -40,7 +43,15 @@
     z-index: 2;
 }
 
+
+
+
+
+
+
+/* --------------------------------------------------------------------------------------------*/
 /*   landing page bobs z index important bgs and positions and radius variable on all of them  */
+/* --------------------------------------------------------------------------------------------*/
 
 .landing-page-blob-1{
     position: absolute;
